--- a/cutomerHome.html
+++ b/cutomerHome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snoonu - Order with Postomat</title>
+    <title>Snoonu - Order with Snoosafe</title>
     <style>
         * {
             margin: 0;
@@ -21,7 +21,8 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%);
+            /* background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%); */
+            background: #d90217;
             color: white;
             padding: 20px;
             display: flex;
@@ -45,7 +46,7 @@
             top: -8px;
             right: -8px;
             background: white;
-            color: #FF6B35;
+            color: #d90217;;
             width: 20px;
             height: 20px;
             border-radius: 50%;
@@ -125,7 +126,7 @@
         .item-price {
             font-size: 18px;
             font-weight: bold;
-            color: #FF6B35;
+            color: #d90217;
         }
 
         .subtotal-box {
@@ -154,7 +155,8 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%);
+            /* background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%); */
+            background: #d90217;
             color: white;
             border: none;
             padding: 16px;
@@ -194,11 +196,11 @@
         }
 
         .delivery-card:hover {
-            border-color: #FF6B35;
+            border-color: #d90217;
         }
 
         .delivery-card.selected {
-            border-color: #FF6B35;
+            border-color: #d90217;
             background: linear-gradient(135deg, rgba(255, 107, 53, 0.05) 0%, rgba(255, 140, 66, 0.05) 100%);
         }
 
@@ -209,7 +211,7 @@
             right: 16px;
             width: 28px;
             height: 28px;
-            background: #FF6B35;
+            background: #d90217;
             color: white;
             border-radius: 50%;
             display: flex;
@@ -254,14 +256,14 @@
         }
 
         .badge.new {
-            background: #FF6B35;
+            background: #d90217;
         }
 
         .badge.free {
             background: #4CAF50;
         }
 
-        /* Postomat Map */
+        /* Snoosafe Map */
         .map-container {
             padding: 20px;
         }
@@ -322,11 +324,11 @@
         }
 
         .postomat-item:hover {
-            border-color: #FF6B35;
+            border-color: #d90217;
         }
 
         .postomat-item.selected {
-            border-color: #FF6B35;
+            border-color: #d90217;
             background: linear-gradient(135deg, rgba(255, 107, 53, 0.05) 0%, rgba(255, 140, 66, 0.05) 100%);
         }
 
@@ -345,7 +347,7 @@
 
         .distance {
             font-size: 12px;
-            color: #FF6B35;
+            color: #d90217;
             font-weight: 600;
         }
 
@@ -376,7 +378,8 @@
         }
 
         .status-banner {
-            background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%);
+            /* background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%); */
+            background: #d90217;
             color: white;
             border-radius: 12px;
             padding: 24px;
@@ -447,7 +450,7 @@
         }
 
         .timeline-item.active .timeline-icon {
-            background: #FF6B35;
+            background: #d90217;
             color: white;
             animation: pulse 2s infinite;
         }
@@ -538,7 +541,7 @@
 
         .pickup-code {
             background: #FFF3E0;
-            border: 2px dashed #FF6B35;
+            border: 2px dashed #d90217;
             border-radius: 12px;
             padding: 20px;
             margin: 20px 0;
@@ -553,7 +556,7 @@
         .code-value {
             font-size: 32px;
             font-weight: bold;
-            color: #FF6B35;
+            color: #d90217;
             letter-spacing: 4px;
         }
 
@@ -580,8 +583,8 @@
 
         .btn-secondary {
             background: white;
-            color: #FF6B35;
-            border: 2px solid #FF6B35;
+            color: #d90217;
+            border: 2px solid #d90217;
             padding: 16px;
             border-radius: 12px;
             font-size: 16px;
@@ -609,7 +612,7 @@
             width: 200px;
             height: 200px;
             margin: 0 auto 24px;
-            border: 3px dashed #FF6B35;
+            border: 3px dashed #d90217;
             border-radius: 16px;
             display: flex;
             align-items: center;
@@ -711,7 +714,7 @@
             width: 50px;
             height: 50px;
             border: 4px solid #f3f3f3;
-            border-top: 4px solid #FF6B35;
+            border-top: 4px solid #d90217;
             border-radius: 50%;
             animation: spin 1s linear infinite;
             margin: 0 auto 20px;
@@ -725,7 +728,7 @@
         /* Additional CSS for the new page (reuse existing styles where possible) */
 .pickup-code {
     background: #FFF3E0;
-    border: 2px dashed #FF6B35;
+    border: 2px dashed #d90217;
     border-radius: 12px;
     padding: 20px;
     margin: 20px 0;
@@ -741,7 +744,7 @@
 .code-value {
     font-size: 32px;
     font-weight: bold;
-    color: #FF6B35;
+    color: #d90217;
     letter-spacing: 4px;
 }
 
@@ -862,7 +865,7 @@
                     Delivered directly to your doorstep. Estimated time: 30-45 mins
                 </div>
                 <div style="display: flex; justify-content: space-between; align-items: center;">
-                    <span style="font-size: 16px; font-weight: 600; color: #FF6B35;">15 QAR</span>
+                    <span style="font-size: 16px; font-weight: 600; color: #d90217;">15 QAR</span>
                 </div>
             </div>
 
@@ -870,7 +873,7 @@
                 <div class="delivery-header">
                     <div class="delivery-icon">📦</div>
                     <div>
-                        <div class="delivery-title">Postomat Pickup</div>
+                        <div class="delivery-title">Snoosafe Pickup</div>
                     </div>
                 </div>
                 <div class="delivery-subtitle">
@@ -886,7 +889,7 @@
             </div>
 
             <div class="info-box" style="margin-top: 20px;">
-                <div class="info-box-title">💡 Why Choose Postomat?</div>
+                <div class="info-box-title">💡 Why Choose Snoosafe?</div>
                 <div class="info-box-text">
                     ✓ FREE delivery - save 15 QAR!<br>
                     ✓ Pick up anytime within 24 hours<br>
@@ -896,7 +899,7 @@
             </div>
 
             <button class="btn-primary" onclick="showPage('page-postomat-map')">
-                Continue with Postomat (Save 15 QAR!)
+                Continue with Snoosafe (Save 15 QAR!)
             </button>
             <button class="btn-secondary" onclick="alert('Home delivery selected')">
                 Deliver to Home Address
@@ -904,11 +907,11 @@
         </div>
     </div>
 
-    <!-- Page 3: Postomat Location Map -->
+    <!-- Page 3: Snoosafe Location Map -->
     <div id="page-postomat-map" class="page">
         <div class="header">
             <button class="back-btn" onclick="showPage('page-delivery-options')">←</button>
-            <div class="logo">Select Postomat</div>
+            <div class="logo">Select Snoosafe</div>
             <div></div>
         </div>
 
@@ -924,10 +927,10 @@
                 </div>
             </div>
 
-            <div class="section-title">Nearby Postomats</div>
+            <div class="section-title">Nearby Snoosafes</div>
 
             <div class="postomat-list">
-                <div class="postomat-item selected" onclick="selectPostomat(this, 'Al Sadd City Center')">
+                <div class="postomat-item selected" onclick="selectSnoosafe(this, 'Al Sadd City Center')">
                     <div class="postomat-header">
                         <div class="postomat-name">📦 Al Sadd - City Center</div>
                         <div class="distance">0.8 km</div>
@@ -941,7 +944,7 @@
                     </div>
                 </div>
 
-                <div class="postomat-item" onclick="selectPostomat(this, 'West Bay Tower')">
+                <div class="postomat-item" onclick="selectSnoosafe(this, 'West Bay Tower')">
                     <div class="postomat-header">
                         <div class="postomat-name">📦 West Bay - Business District</div>
                         <div class="distance">1.2 km</div>
@@ -955,7 +958,7 @@
                     </div>
                 </div>
 
-                <div class="postomat-item" onclick="selectPostomat(this, 'The Pearl')">
+                <div class="postomat-item" onclick="selectSnoosafe(this, 'The Pearl')">
                     <div class="postomat-header">
                         <div class="postomat-name">📦 The Pearl - Porto Arabia</div>
                         <div class="distance">2.5 km</div>
@@ -969,7 +972,7 @@
                     </div>
                 </div>
 
-                <div class="postomat-item" onclick="selectPostomat(this, 'Lusail Marina')">
+                <div class="postomat-item" onclick="selectSnoosafe(this, 'Lusail Marina')">
                     <div class="postomat-header">
                         <div class="postomat-name">📦 Lusail - Marina District</div>
                         <div class="distance">3.1 km</div>
@@ -1032,7 +1035,7 @@
             <div class="pickup-icon">🔓</div>
             <div class="pickup-title">Your Order is Here!</div>
             <div class="pickup-subtitle">
-                Your delicious food is waiting in the secure compartment at Al Sadd - City Center Postomat. 
+                Your delicious food is waiting in the secure compartment at Al Sadd - City Center Snoosafe. 
                 Tap the button below to unlock and retrieve your order.
             </div>
             
@@ -1057,18 +1060,18 @@
     <div id="page-scanner" class="page">
         <div class="header">
             <button class="back-btn" onclick="showPage('page-order-ready')">←</button>
-            <div class="logo">Scan Postomat</div>
+            <div class="logo">Scan Snoosafe</div>
             <div></div>
         </div>
 
         <div class="scanner-container">
             <div class="scanner-box">
                 <div class="qr-icon">📷</div>
-                <div class="scanner-text">Point camera at Postomat QR</div>
+                <div class="scanner-text">Point camera at Snoosafe QR</div>
                 <div class="scanner-subtext">The QR code is on the front panel</div>
             </div>
 
-            <button class="btn-primary" onclick="simulateScan()">Simulate QR Scan</button>
+            <button class="btn-primary" onclick="simulateScan()">Scan QR</button>
         </div>
     </div>
 
@@ -1079,7 +1082,7 @@
 
         <div class="loading">
             <div class="spinner"></div>
-            <h3 style="color: #333; margin-bottom: 8px;">Connecting to Postomat...</h3>
+            <h3 style="color: #333; margin-bottom: 8px;">Connecting to Snoosafe...</h3>
             <p style="color: #666; font-size: 14px;">Opening your compartment</p>
         </div>
     </div>
@@ -1110,7 +1113,7 @@ function selectDelivery(type) {
         document.getElementById('delivery-fee').textContent = '15 QAR';
         document.getElementById('total-amount').textContent = '140 QAR';
     } else if (type === 'postomat') {
-        // Assuming the second delivery-card is Postomat Pickup
+        // Assuming the second delivery-card is Snoosafe Pickup
         document.querySelectorAll('.delivery-card')[1].classList.add('selected');
         // Update delivery fee and total (free for postomat)
         document.getElementById('delivery-fee').textContent = '0 QAR';
@@ -1119,7 +1122,7 @@ function selectDelivery(type) {
 }
 
 // Function to select a postomat location
-function selectPostomat(element, name) {
+function selectSnoosafe(element, name) {
     // Remove 'selected' class from all postomat items
     document.querySelectorAll('.postomat-item').forEach(item => {
         item.classList.remove('selected');
@@ -1130,9 +1133,9 @@ function selectPostomat(element, name) {
 
 // Function to confirm the order (this could lead to payment or tracking, but since not in HTML, using an alert for now)
 function confirmOrder() {
-    const selectedPostomat = document.querySelector('.postomat-item.selected .postomat-name');
-    if (selectedPostomat) {
-        alert(`Order confirmed! Your order will be delivered to ${selectedPostomat.textContent}.`);
+    const selectedSnoosafe = document.querySelector('.postomat-item.selected .postomat-name');
+    if (selectedSnoosafe) {
+        alert(`Order confirmed! Your order will be delivered to ${selectedSnoosafe.textContent}.`);
         showPage('page-order-ready');
             } else {
         alert('Please select a postomat location first.');
