--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snoonu - Prototypes</title>
+    <title>Snoosafe - Prototypes</title>
     <style>
         * {
             margin: 0;
@@ -25,7 +25,7 @@
         }
 
         .header {
-            background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%);
+            background: #d90217;
             color: white;
             padding: 20px;
             text-align: center;
@@ -50,7 +50,7 @@
         }
 
         .btn-prototype {
-            background: linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%);
+            background: #d90217;
             color: white;
             border: none;
             padding: 18px 30px;
