--- a/cutomerHome.html
+++ b/cutomerHome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snoonu - Order with Snoosafe</title>
+    <title>Customer UI</title>
     <style>
         * {
             margin: 0;
@@ -29,6 +29,7 @@
             align-items: center;
             justify-content: space-between;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-radius: 10px;
         }
 
         .logo {
@@ -1039,10 +1040,10 @@
                 Tap the button below to unlock and retrieve your order.
             </div>
             
-            <div class="pickup-code">
+            <!-- <div class="pickup-code">
                 <div class="code-label">Pickup Code</div>
                 <div class="code-value">A7B2C9</div>
-            </div>
+            </div> -->
 
             <div class="info-box">
                 <div class="info-box-title">🔒 Security Reminder</div>
@@ -1077,7 +1078,7 @@
 
      <div id="page-loading" class="page">
         <div class="header">
-            <div class="logo">🚚 Snoonu</div>
+            <div class="logo">Snoonu</div>
         </div>
 
         <div class="loading">
