--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snoosafe - Prototypes</title>
+    <title>Snoosafe - UI Prototypes</title>
     <style>
         * {
             margin: 0;
@@ -31,6 +31,7 @@
             text-align: center;
             width: 100%;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-radius: 10px;
         }
 
         .logo {
@@ -92,17 +93,17 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">🚀 Snoonu Prototypes</div>
+        <div class="logo">Snoosafe Prototypes</div>
     </div>
 
     <div class="prototype-container">
         <div class="prototype-title">Choose Your Experience</div>
         <a href="./cutomerHome.html" class="btn-prototype">
-  Customer Prototype
+  Customer Interface
 </a>
 
 <a href="./driverHome.html" class="btn-prototype">
-  Delivery Guy Prototype
+  Delivery Bro Interface
 </a>
     </div>
 </body>
