--- a/driverHome.html
+++ b/driverHome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snoonu Snoosafe - Delivery</title>
+    <title>Delivery Bro UI</title>
     <style>
         * {
             margin: 0;
@@ -30,6 +30,7 @@
             align-items: center;
             justify-content: space-between;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border-radius: 10px;
         }
 
         .logo {
@@ -421,7 +422,7 @@
         </div>
 
         <div class="greeting">
-            <h2>Hello, Ahmed! 👋</h2>
+            <h2>Hello, Delivery Bro! 👋</h2>
             <p>You have 3 active deliveries today</p>
         </div>
 
@@ -495,7 +496,7 @@
     <!-- Page 3: Loading -->
     <div id="page-loading" class="page">
         <div class="header">
-            <div class="logo">🚚 Snoonu</div>
+            <div class="logo">Snoonu</div>
         </div>
 
         <div class="loading">
