--- a/cutomerHome.html
+++ b/cutomerHome.html
@@ -795,40 +795,40 @@
 
         <div class="cart-container">
             <div class="cart-item">
-                <div class="item-image">🍔</div>
+                <div class="item-image">📷</div>
                 <div class="item-details">
-                    <div class="item-name">Beef Burger Combo</div>
-                    <div class="item-restaurant">The Burger House</div>
-                    <div class="item-price">45 QAR</div>
+                    <div class="item-name">Camera XP Pro</div>
+                    <div class="item-restaurant">XP Electronics</div>
+                    <div class="item-price">1500 QAR</div>
                 </div>
             </div>
 
             <div class="cart-item">
-                <div class="item-image">🍕</div>
+                <div class="item-image">🥚</div>
                 <div class="item-details">
-                    <div class="item-name">Margherita Pizza</div>
-                    <div class="item-restaurant">Pizza Corner</div>
-                    <div class="item-price">55 QAR</div>
+                    <div class="item-name">A nice egg</div>
+                    <div class="item-restaurant">Chickens</div>
+                    <div class="item-price">2 QAR</div>
                 </div>
             </div>
 
             <div class="cart-item">
-                <div class="item-image">🥤</div>
+                <div class="item-image">🍫</div>
                 <div class="item-details">
-                    <div class="item-name">Fresh Juice (2x)</div>
-                    <div class="item-restaurant">Juice Bar</div>
-                    <div class="item-price">20 QAR</div>
+                    <div class="item-name">Koko Chocolate(3x)</div>
+                    <div class="item-restaurant">Koko Bakers</div>
+                    <div class="item-price">95 QAR</div>
                 </div>
             </div>
 
             <div class="subtotal-box">
                 <div class="subtotal-row">
                     <span>Subtotal</span>
-                    <span>120 QAR</span>
+                    <span>1597 QAR</span>
                 </div>
                 <div class="subtotal-row">
                     <span>Service Fee</span>
-                    <span>5 QAR</span>
+                    <span>0 QAR</span>
                 </div>
                 <div class="subtotal-row">
                     <span>Delivery Fee</span>
@@ -836,7 +836,7 @@
                 </div>
                 <div class="subtotal-row total">
                     <span>Total</span>
-                    <span id="total-amount">140 QAR</span>
+                    <span id="total-amount">1612 QAR</span>
                 </div>
             </div>
 
@@ -893,7 +893,7 @@
                 <div class="info-box-title">💡 Why Choose Snoosafe?</div>
                 <div class="info-box-text">
                     ✓ FREE delivery - save 15 QAR!<br>
-                    ✓ Pick up anytime within 24 hours<br>
+                    ✓ Pick up anytime within 72 hours<br>
                     ✓ No need to wait at home<br>
                     ✓ Safe & secure smart lockers
                 </div>
