--- a/driverHome.html
+++ b/driverHome.html
@@ -416,13 +416,13 @@
     <div id="page-home" class="page active">
         <div class="header">
             <div class="logo">
-                🚚 Snoonu
+                 Snoonu
                 <span class="delivery-badge">DELIVERY</span>
             </div>
         </div>
 
         <div class="greeting">
-            <h2>Hello, Delivery Bro! 👋</h2>
+            <h2>Hello, Delivery Bro!</h2>
             <p>You have 3 active deliveries today</p>
         </div>
 
@@ -616,7 +616,7 @@
     <!-- Page 6: Success -->
     <div id="page-success" class="page">
         <div class="header">
-            <div class="logo">🚚 Snoonu</div>
+            <div class="logo">Snoonu</div>
         </div>
 
         <div class="success-container">
